css and include files

--- a/themes/layout-theme/layout/layout.html
+++ b/themes/layout-theme/layout/layout.html
@@ -12,6 +12,9 @@
     {% endif %}
     </title>
     {% block head %}
+    <style>
+        {% include 'css/tailwind.min.css' %}
+    </style>
     {% endblock head %}
 </head>
 <body>
